--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,120 +1,120 @@
-version: '3.8'
+version: "3.8"
 
 services:
   # Frontend React Application
-  web:
-    container_name: web
-    build:
-      context: .
-      dockerfile: ./apps/web/Dockerfile
-      target: development
-    ports:
-      - '3000:3000'
-    environment:
-      - NODE_ENV=development
-    networks:
-      - challenge-network
-    command: npm run dev -- --host 0.0.0.0
+  # web:
+  #   container_name: web
+  #   build:
+  #     context: .
+  #     dockerfile: ./apps/web/Dockerfile
+  #     target: development
+  #   ports:
+  #     - "3000:3000"
+  #   environment:
+  #     - NODE_ENV=development
+  #   networks:
+  #     - challenge-network
+  #   command: npm run dev -- --host 0.0.0.0
 
   # API Gateway
-  api-gateway:
-    container_name: api-gateway
-    build:
-      context: .
-      dockerfile: ./apps/api-gateway/Dockerfile
-      target: development
-    ports:
-      - '3001:3001'
-    volumes:
-      - .:/app
-      - ./packages:/app/packages
-      - /app/node_modules
-      - /app/apps/api-gateway/node_modules
-    environment:
-      - NODE_ENV=development
-      - PORT=3001
-    depends_on:
-      db:
-        condition: service_started
-      rabbitmq:
-        condition: service_started
-    networks:
-      - challenge-network
+  # api-gateway:
+  #   container_name: api-gateway
+  #   build:
+  #     context: .
+  #     dockerfile: ./apps/api-gateway/Dockerfile
+  #     target: development
+  #   ports:
+  #     - '3001:3001'
+  #   volumes:
+  #     - .:/app
+  #     - ./packages:/app/packages
+  #     - /app/node_modules
+  #     - /app/apps/api-gateway/node_modules
+  #   environment:
+  #     - NODE_ENV=development
+  #     - PORT=3001
+  #   depends_on:
+  #     db:
+  #       condition: service_started
+  #     rabbitmq:
+  #       condition: service_started
+  #   networks:
+  #     - challenge-network
 
   # Auth Service
-  auth-service:
-    container_name: auth-service
-    build:
-      context: .
-      dockerfile: ./apps/auth-service/Dockerfile
-      target: development
-    ports:
-      - '3002:3002'
-    volumes:
-      - .:/app
-      - ./packages:/app/packages
-      - /app/node_modules
-      - /app/apps/auth-service/node_modules
-    environment:
-      - NODE_ENV=development
-      - PORT=3002
-    depends_on:
-      db:
-        condition: service_started
-      rabbitmq:
-        condition: service_started
-    networks:
-      - challenge-network
+  # auth-service:
+  #   container_name: auth-service
+  #   build:
+  #     context: .
+  #     dockerfile: ./apps/auth-service/Dockerfile
+  #     target: development
+  #   ports:
+  #     - "3002:3002"
+  #   volumes:
+  #     - .:/app
+  #     - ./packages:/app/packages
+  #     - /app/node_modules
+  #     - /app/apps/auth-service/node_modules
+  #   environment:
+  #     - NODE_ENV=development
+  #     - PORT=3002
+  #   depends_on:
+  #     db:
+  #       condition: service_started
+  #     rabbitmq:
+  #       condition: service_started
+  #   networks:
+  #     - challenge-network
 
   # Tasks Service
-  tasks-service:
-    container_name: tasks-service
-    build:
-      context: .
-      dockerfile: ./apps/tasks-service/Dockerfile
-      target: development
-    ports:
-      - '3003:3003'
-    volumes:
-      - .:/app
-      - ./packages:/app/packages
-      - /app/node_modules
-      - /app/apps/tasks-service/node_modules
-    environment:
-      - NODE_ENV=development
-      - PORT=3003
-    depends_on:
-      db:
-        condition: service_started
-      rabbitmq:
-        condition: service_started
-    networks:
-      - challenge-network
+  # tasks-service:
+  #   container_name: tasks-service
+  #   build:
+  #     context: .
+  #     dockerfile: ./apps/tasks-service/Dockerfile
+  #     target: development
+  #   ports:
+  #     - '3003:3003'
+  #   volumes:
+  #     - .:/app
+  #     - ./packages:/app/packages
+  #     - /app/node_modules
+  #     - /app/apps/tasks-service/node_modules
+  #   environment:
+  #     - NODE_ENV=development
+  #     - PORT=3003
+  #   depends_on:
+  #     db:
+  #       condition: service_started
+  #     rabbitmq:
+  #       condition: service_started
+  #   networks:
+  #     - challenge-network
 
   # Notifications Service
-  notifications-service:
-    container_name: notifications-service
-    build:
-      context: .
-      dockerfile: ./apps/notifications-service/Dockerfile
-      target: development
-    ports:
-      - '3004:3004'
-    volumes:
-      - .:/app
-      - ./packages:/app/packages
-      - /app/node_modules
-      - /app/apps/notifications-service/node_modules
-    environment:
-      - NODE_ENV=development
-      - PORT=3004
-    depends_on:
-      db:
-        condition: service_started
-      rabbitmq:
-        condition: service_started
-    networks:
-      - challenge-network
+  # notifications-service:
+  #   container_name: notifications-service
+  #   build:
+  #     context: .
+  #     dockerfile: ./apps/notifications-service/Dockerfile
+  #     target: development
+  #   ports:
+  #     - '3004:3004'
+  #   volumes:
+  #     - .:/app
+  #     - ./packages:/app/packages
+  #     - /app/node_modules
+  #     - /app/apps/notifications-service/node_modules
+  #   environment:
+  #     - NODE_ENV=development
+  #     - PORT=3004
+  #   depends_on:
+  #     db:
+  #       condition: service_started
+  #     rabbitmq:
+  #       condition: service_started
+  #   networks:
+  #     - challenge-network
 
   # Postgres Database
   db:
@@ -122,7 +122,7 @@ services:
     container_name: db
     attach: false
     ports:
-      - '5432:5432'
+      - "5432:5432"
     networks:
       - challenge-network
     restart: always
@@ -140,14 +140,14 @@ services:
     attach: false
     restart: always
     ports:
-      - '5672:5672'
-      - '15672:15672'
+      - "5672:5672"
+      - "15672:15672"
     networks:
       - challenge-network
     environment:
       RABBITMQ_DEFAULT_USER: admin
       RABBITMQ_DEFAULT_PASS: admin
-    volumes: ['rabbitmq_data:/var/lib/rabbitmq']
+    volumes: ["rabbitmq_data:/var/lib/rabbitmq"]
 
 volumes:
   postgres_data:
