--- a/apps/api-gateway/package.json
+++ b/apps/api-gateway/package.json
@@ -5,10 +5,13 @@
     "dev": "nest start --watch",
     "build": "nest build",
     "start": "node dist/main",
-    "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
+    "migrate": "typeorm migration:run -d src/database/data-source.ts",
+    "migrate:generate": "typeorm migration:generate src/database/migrations/Migration -d src/database/data-source.ts",
+    "migrate:revert": "typeorm migration:revert -d src/database/data-source.ts"
   },
   "dependencies": {
+    "@repo/config": "workspace:*",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
