--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "types",
+  "name": "@monorepo/common-database",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -14,8 +14,9 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.3",
+    "@nestjs/config": "^4.0.2",
+    "dotenv": "^17.2.3",
+    "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.27"
   }
 }
