--- a/apps/auth-service/package.json
+++ b/apps/auth-service/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@monorepo/common-config": "workspace:^",
+    "@monorepo/common-types": "workspace:^",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.1",
